# TestTelegramAuth

./: .env.excample  Dockerfile  Dockerfile.bot  Makefile  README.md  pyproject.toml
bot/: container.py  main.py  settings.py
bot/domain/events/: base.py  telegram_user.py
bot/message_broker/event_factory/: base.py  rabbit_factory.py
bot/message_broker/event_factory/telegram_user/: event_to_message.py
bot/message_broker/producer/: base.py  rabbit_mq_producer.py
core/api/: urls.py
core/api/v1/: urls.py
core/api/v1/telegram_user/: serializers.py  views.py
core/application/: mediator.py
core/application/events/: telegram_user.py
core/application/use_cases/: base.py  telegram_user.py  token.py
core/apps/telegram_auth/: admin.py  apps.py  models.py
core/apps/telegram_auth/entities/: base.py  telegram_user.py
core/apps/telegram_auth/events/: base.py  telegram_user.py
core/apps/telegram_auth/migrations/: 0001_initial.py  0002_alter_telegramusermodel_telegram_id.py
core/apps/telegram_auth/templates/telegram_auth/: index.html
core/frontend/: urls.py  views.py
core/infra/cache_repositories/: base.py  redis.py
core/infra/message_broker/consumer/: base.py  rabbit_consumer.py
core/infra/message_broker/event_factory/: base.py  rabbit_factory.py
core/infra/message_broker/event_factory/telegram_user/: message_to_event.py
core/infra/repositories/: base.py  exceptions.py  telegram_user.py
core/project/: container.py
core/project/settings/: main.py
docker_compose/: app.yaml  storages.yaml
